--- a/en/portfolio/index.html
+++ b/en/portfolio/index.html
@@ -97,6 +97,7 @@
                         href="https://github.com/MontealegreLuis/spring-blog"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -107,6 +108,7 @@
                         href="https://travis-ci.org/MontealegreLuis/spring-blog"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/spring-blog.svg?branch=master"
@@ -117,6 +119,7 @@
                         href="https://codebeat.co/projects/github-com-montealegreluis-spring-blog-master"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/cb353c07-f5f0-4862-a7f1-419008e1c40b"
@@ -142,6 +145,7 @@
                         href="https://github.com/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -152,6 +156,7 @@
                         href="https://travis-ci.org/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/hibernate-example.svg?branch=master"
@@ -162,6 +167,7 @@
                         href="https://codebeat.co/projects/github-com-montealegreluis-hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/df70242a-a3d4-4367-8785-6703e4e243e6"
@@ -187,6 +193,7 @@
                         href="https://github.com/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -197,6 +204,7 @@
                         href="https://travis-ci.org/MontealegreLuis/movies"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/movies.svg?branch=master"
@@ -207,6 +215,7 @@
                         href="https://codebeat.co/projects/github-com-montealegreluis-movies"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/9a9920f0-dbf3-4424-a5dc-e7d429870bdc"
@@ -231,6 +240,7 @@
                         href="https://github.com/MontealegreLuis/simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -241,6 +251,7 @@
                         href="https://travis-ci.org/MontealegreLuis/simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/simple-simon.svg?branch=master"
@@ -251,6 +262,7 @@
                         href="https://codebeat.co/projects/github-com-montealegreluis-simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/fc41b73e-e111-4349-bc44-6eb913087c40"
@@ -277,6 +289,7 @@
                         href="https://github.com/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -287,6 +300,7 @@
                         href="https://travis-ci.org/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/php-testing-tools.svg?branch=master"
@@ -297,6 +311,7 @@
                         href="https://codeclimate.com/github/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codeclimate.com/github/MontealegreLuis/php-testing-tools/badges/gpa.svg"
@@ -321,6 +336,7 @@
                         href="https://github.com/MontealegreLuis/readit"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -331,6 +347,7 @@
                         href="https://travis-ci.org/MontealegreLuis/readit"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/readit.svg?branch=master"
@@ -341,6 +358,7 @@
                         href="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4/mini.png"
@@ -367,6 +385,7 @@
                         href="https://bitbucket.org/MontealegreLuis/edeco"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -392,6 +411,7 @@
                         href="https://bitbucket.org/MontealegreLuis/agata"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -417,6 +437,7 @@
                         href="https://github.com/MontealegreLuis/fitbit-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -450,33 +471,36 @@
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://travis-ci.org/ComPHPPuebla/slim-modules"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://travis-ci.org/ComPHPPuebla/slim-modules"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://travis-ci.org/ComPHPPuebla/slim-modules.svg?branch=master"
-                                alt="Build Status"
+                            src="https://travis-ci.org/ComPHPPuebla/slim-modules.svg?branch=master"
+                            alt="Build Status"
                         >
                     </a>
                     <a
-                            href="https://packagist.org/packages/comphppuebla/slim-modules"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://packagist.org/packages/comphppuebla/slim-modules"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://poser.pugx.org/comphppuebla/slim-modules/license.svg"
-                                alt="License"
+                            src="https://poser.pugx.org/comphppuebla/slim-modules/license.svg"
+                            alt="License"
                         >
                     </a>
                     <a
-                            href="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451/mini.png"
-                                alt="SensioLabsInsight"
+                            src="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451/mini.png"
+                            alt="SensioLabsInsight"
                         >
                     </a>
                 </div>
@@ -497,33 +521,36 @@
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://travis-ci.org/ComPHPPuebla/dbal-fixtures"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://travis-ci.org/ComPHPPuebla/dbal-fixtures"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://travis-ci.org/ComPHPPuebla/dbal-fixtures.svg?branch=master"
-                                alt="Build Status"
+                            src="https://travis-ci.org/ComPHPPuebla/dbal-fixtures.svg?branch=master"
+                            alt="Build Status"
                         >
                     </a>
                     <a
-                            href="https://packagist.org/packages/comphppuebla/dbal-fixtures"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://packagist.org/packages/comphppuebla/dbal-fixtures"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://poser.pugx.org/comphppuebla/dbal-fixtures/license.svg"
-                                alt="License"
+                            src="https://poser.pugx.org/comphppuebla/dbal-fixtures/license.svg"
+                            alt="License"
                         >
                     </a>
                     <a
-                            href="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9/mini.png"
-                                alt="SensioLabsInsight"
+                            src="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9/mini.png"
+                            alt="SensioLabsInsight"
                         >
                     </a>
                 </div>
@@ -546,33 +573,36 @@
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://travis-ci.org/ComPHPPuebla/easy-forms"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://travis-ci.org/ComPHPPuebla/easy-forms"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://travis-ci.org/ComPHPPuebla/easy-forms.svg?branch=master"
-                                alt="Build Status"
+                            src="https://travis-ci.org/ComPHPPuebla/easy-forms.svg?branch=master"
+                            alt="Build Status"
                         >
                     </a>
                     <a
-                            href="https://packagist.org/packages/comphppuebla/easy-forms"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://packagist.org/packages/comphppuebla/easy-forms"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://poser.pugx.org/comphppuebla/easy-forms/license.svg"
-                                alt="License"
+                            src="https://poser.pugx.org/comphppuebla/easy-forms/license.svg"
+                            alt="License"
                         >
                     </a>
                     <a
-                            href="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea/mini.png"
-                                alt="SensioLabsInsight"
+                            src="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea/mini.png"
+                            alt="SensioLabsInsight"
                         >
                     </a>
                 </div>
@@ -593,13 +623,14 @@
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://github.com/MontealegreLuis/php-container"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://github.com/MontealegreLuis/php-container"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
-                                alt="license"
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
                         >
                     </a>
                 </div>
@@ -628,6 +659,7 @@
                         href="https://github.com/ComPHPPuebla/taller-composer"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -653,6 +685,7 @@
                         href="https://github.com/ComPHPPuebla/sf2workshop"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -683,6 +716,7 @@
                                 href="https://www.youtube.com/watch?v=2GuYLle45bw"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/2GuYLle45bw/2.jpg"
@@ -712,6 +746,7 @@
                                 href="https://www.youtube.com/watch?v=6IH2Un35pb0"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/6IH2Un35pb0/2.jpg"
@@ -743,6 +778,7 @@
                                 href="https://www.youtube.com/watch?v=P5s8Sydo154"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/P5s8Sydo154/2.jpg"
@@ -760,6 +796,7 @@
                                 href="https://www.youtube.com/watch?v=iRDwfnKOKtk"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/iRDwfnKOKtk/2.jpg"
