--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -97,6 +97,7 @@
                         href="https://github.com/MontealegreLuis/spring-blog"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -107,6 +108,7 @@
                         href="https://travis-ci.org/MontealegreLuis/spring-blog"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/spring-blog.svg?branch=master"
@@ -117,6 +119,7 @@
                         href="https://codebeat.co/projects/github-com-montealegreluis-spring-blog-master"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/cb353c07-f5f0-4862-a7f1-419008e1c40b"
@@ -141,6 +144,7 @@
                         href="https://github.com/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -151,6 +155,7 @@
                         href="https://travis-ci.org/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/hibernate-example.svg?branch=master"
@@ -161,6 +166,7 @@
                         href="https://codebeat.co/projects/github-com-montealegreluis-hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/df70242a-a3d4-4367-8785-6703e4e243e6"
@@ -186,6 +192,7 @@
                         href="https://github.com/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -196,6 +203,7 @@
                         href="https://travis-ci.org/MontealegreLuis/movies"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/movies.svg?branch=master"
@@ -206,6 +214,7 @@
                         href="https://codebeat.co/projects/github-com-montealegreluis-movies"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/9a9920f0-dbf3-4424-a5dc-e7d429870bdc"
@@ -230,6 +239,7 @@
                         href="https://github.com/MontealegreLuis/simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -240,6 +250,7 @@
                         href="https://travis-ci.org/MontealegreLuis/simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/simple-simon.svg?branch=master"
@@ -250,6 +261,7 @@
                         href="https://codebeat.co/projects/github-com-montealegreluis-simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/fc41b73e-e111-4349-bc44-6eb913087c40"
@@ -276,6 +288,7 @@
                         href="https://github.com/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -286,6 +299,7 @@
                         href="https://travis-ci.org/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/php-testing-tools.svg?branch=master"
@@ -296,6 +310,7 @@
                         href="https://codeclimate.com/github/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codeclimate.com/github/MontealegreLuis/php-testing-tools/badges/gpa.svg"
@@ -320,6 +335,7 @@
                         href="https://github.com/MontealegreLuis/readit"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -330,6 +346,7 @@
                         href="https://travis-ci.org/MontealegreLuis/readit"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/readit.svg?branch=master"
@@ -340,6 +357,7 @@
                         href="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4/mini.png"
@@ -366,6 +384,7 @@
                         href="https://bitbucket.org/MontealegreLuis/edeco"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -391,6 +410,7 @@
                         href="https://bitbucket.org/MontealegreLuis/agata"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -416,6 +436,7 @@
                         href="https://github.com/MontealegreLuis/fitbit-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -452,6 +473,7 @@
                         href="https://travis-ci.org/ComPHPPuebla/slim-modules"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/ComPHPPuebla/slim-modules.svg?branch=master"
@@ -462,6 +484,7 @@
                         href="https://packagist.org/packages/comphppuebla/slim-modules"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://poser.pugx.org/comphppuebla/slim-modules/license.svg"
@@ -472,6 +495,7 @@
                         href="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451/mini.png"
@@ -499,6 +523,7 @@
                         href="https://travis-ci.org/ComPHPPuebla/dbal-fixtures"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/ComPHPPuebla/dbal-fixtures.svg?branch=master"
@@ -509,6 +534,7 @@
                         href="https://packagist.org/packages/comphppuebla/dbal-fixtures"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://poser.pugx.org/comphppuebla/dbal-fixtures/license.svg"
@@ -519,6 +545,7 @@
                         href="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9/mini.png"
@@ -548,6 +575,7 @@
                         href="https://travis-ci.org/ComPHPPuebla/easy-forms"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/ComPHPPuebla/easy-forms.svg?branch=master"
@@ -558,6 +586,7 @@
                         href="https://packagist.org/packages/comphppuebla/easy-forms"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://poser.pugx.org/comphppuebla/easy-forms/license.svg"
@@ -568,6 +597,7 @@
                         href="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea/mini.png"
@@ -591,13 +621,14 @@
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://github.com/MontealegreLuis/php-container"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://github.com/MontealegreLuis/php-container"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
-                                alt="license"
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
                         >
                     </a>
                 </div>
@@ -626,6 +657,7 @@
                         href="https://github.com/ComPHPPuebla/taller-composer"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -650,6 +682,7 @@
                         href="https://github.com/ComPHPPuebla/sf2workshop"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -680,6 +713,7 @@
                                 href="https://www.youtube.com/watch?v=2GuYLle45bw"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/2GuYLle45bw/2.jpg"
@@ -708,6 +742,7 @@
                                 href="https://www.youtube.com/watch?v=6IH2Un35pb0"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/6IH2Un35pb0/2.jpg"
@@ -738,6 +773,7 @@
                                 href="https://www.youtube.com/watch?v=P5s8Sydo154"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/P5s8Sydo154/2.jpg"
@@ -754,11 +790,12 @@
                                 href="https://www.youtube.com/watch?v=iRDwfnKOKtk"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/iRDwfnKOKtk/2.jpg"
                                     alt="Part 2"
-                               >
+                                >
                             </a>
                         </div>
                     </div>
